--- a/style.css
+++ b/style.css
@@ -24,14 +24,21 @@ body {
 
 }
 
-/* HEAD */
-.head-logo-nav {
-  display: flex;
-  /* grid-template-columns: auto auto;
-  grid-template-rows: auto; */
+/* HEADER */
 
+.head-logo-nav {
+
+  display: grid;
+
+  grid-template-rows: 60px;
+  grid-template-columns: auto auto;
+
+  margin-top: 35px;
   align-items: center;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+
 }
 
 .logo {
@@ -41,6 +48,36 @@ body {
 
 .logoL {
   width: 400px
+}
+
+.item {
+  width: 100px;
+  height: 100px;
+  align-self: center;
+  justify-content: center;
+}
+
+.head-nav {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+
+
+  align-items: center;
+  justify-items: center;
+
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 1px;
+  border-bottom: 1px;
+
+  border-style: solid;
+  border-color: white;
+  background-color: black;
+
+  padding: 0px;
+  margin: 10px;
+  margin-top: 5px;
 }
 
 /* SVG */
@@ -164,10 +201,7 @@ display-modal {
 
 }
 
-.carrosel-prev {
-  width: 10px;
-  border-radius: 50%;
-}
+.carrosel-prev control-next {}
 
 .myToggle {
   padding-top: 2%;
@@ -188,56 +222,10 @@ display-modal {
   text-align: center;
 }
 
-.head-logo-nav {
-
-  display: grid;
-
-  grid-template-rows: 60px;
-  grid-template-columns: auto auto;
-
-  margin-top: 35px;
-  align-items: center;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-
-}
-
 .btn-outline-dark {
   color: pink;
   margin: 5px;
 }
-
-.head-nav {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-
-
-  align-items: center;
-  justify-items: center;
-
-  border-left: 0px;
-  border-right: 0px;
-  border-top: 1px;
-  border-bottom: 1px;
-
-  border-style: solid;
-  border-color: white;
-  background-color: black;
-
-  padding: 0px;
-  margin: 10px;
-  margin-top: 5px;
-}
-
-.item {
-  width: 100px;
-  height: 100px;
-  align-self: center;
-  justify-content: center;
-}
-
 
 html,
 body {
@@ -262,13 +250,10 @@ body {
   justify-content: center;
 }
 
-.item-footer {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-
 @media screen and (max-width: 3000px) {
+
+  /********** HEADER ******************/
+
   .logo {
     width: 120px;
     margin-bottom: 35px;
@@ -282,21 +267,8 @@ body {
   }
 
 
-  .navbar {
-    background-color: black;
-    height: 10vh;
-  }
+  /********** FOTER  ******************/
 
-  /* .head-nav {
-    padding: 20px;
-  } */
-
-  .c-ill {
-    /* Carousel 1 */
-    display: block;
-  }
-
-  /* FOTTER */
   .Endereço-footer {
     text-align: center;
     margin-top: 10px;
@@ -333,11 +305,6 @@ body {
     margin-top: 5px;
     margin-left: 7px;
   }
-
-  /* .head-nav {
-    padding: 0;
-    margin: 10px;
-  } */
 
   .head-logo-nav {
     margin-top: 10px;
